wdlformat/grammar2/WdlV1Parser.py
# Generated from WdlV1Parser.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class WdlV1Parser ( Parser ):

    grammarFileName = "WdlV1Parser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'version'", "'import'", 
                     "'workflow'", "'task'", "'struct'", "'scatter'", "'call'", 
                     "'if'", "'then'", "'else'", "'alias'", "'as'", "'in'", 
                     "'input'", "'output'", "'parameter_meta'", "'meta'", 
                     "'command'", "'runtime'", "'Boolean'", "'Int'", "'Float'", 
                     "'String'", "'File'", "'Array'", "'Map'", "'Pair'", 
                     "'Object'", "'object'", "'sep'", "'default'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'('", "')'", "<INVALID>", 
                     "<INVALID>", "'['", "<INVALID>", "'\\'", "<INVALID>", 
                     "'<'", "'>'", "'>='", "'<='", "'=='", "'!='", "'='", 
                     "'&&'", "'||'", "'?'", "'*'", "'+'", "'-'", "<INVALID>", 
                     "<INVALID>", "';'", "'.'", "'!'", "<INVALID>", "'/'", 
                     "'%'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'<<<'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'null'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'\\>>>'" ]

    symbolicNames = [ "<INVALID>", "LINE_COMMENT", "VERSION", "IMPORT", 
                      "WORKFLOW", "TASK", "STRUCT", "SCATTER", "CALL", "IF", 
                      "THEN", "ELSE", "ALIAS", "AS", "In", "INPUT", "OUTPUT", 
                      "PARAMETERMETA", "META", "COMMAND", "RUNTIME", "BOOLEAN", 
                      "INT", "FLOAT", "STRING", "FILE", "ARRAY", "MAP", 
                      "PAIR", "OBJECT", "OBJECT_LITERAL", "SEP", "DEFAULT", 
                      "IntLiteral", "FloatLiteral", "BoolLiteral", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", 
                      "ESC", "COLON", "LT", "GT", "GTE", "LTE", "EQUALITY", 
                      "NOTEQUAL", "EQUAL", "AND", "OR", "OPTIONAL", "STAR", 
                      "PLUS", "MINUS", "DOLLAR", "COMMA", "SEMI", "DOT", 
                      "NOT", "TILDE", "DIVIDE", "MOD", "SQUOTE", "DQUOTE", 
                      "WHITESPACE", "Identifier", "StringPart", "BeginWhitespace", 
                      "BeginHereDoc", "BeginLBrace", "HereDocUnicodeEscape", 
                      "CommandUnicodeEscape", "StringCommandStart", "EndCommand", 
                      "CommandStringPart", "VersionWhitespace", "ReleaseVersion", 
                      "BeginMeta", "MetaWhitespace", "MetaBodyComment", 
                      "MetaIdentifier", "MetaColon", "EndMeta", "MetaBodyWhitespace", 
                      "MetaValueComment", "MetaBool", "MetaInt", "MetaFloat", 
                      "MetaNull", "MetaSquote", "MetaDquote", "MetaEmptyObject", 
                      "MetaEmptyArray", "MetaLbrack", "MetaLbrace", "MetaValueWhitespace", 
                      "MetaStringPart", "MetaArrayComment", "MetaArrayCommaRbrack", 
                      "MetaArrayComma", "MetaRbrack", "MetaArrayWhitespace", 
                      "MetaObjectComment", "MetaObjectIdentifier", "MetaObjectColon", 
                      "MetaObjectCommaRbrace", "MetaObjectComma", "MetaRbrace", 
                      "MetaObjectWhitespace", "HereDocEscapedEnd" ]

    RULE_comment = 0
    RULE_meta_comment = 1
    RULE_meta_value_comment = 2
    RULE_meta_array_comment = 3
    RULE_meta_object_comment = 4
    RULE_map_type = 5
    RULE_array_type = 6
    RULE_pair_type = 7
    RULE_type_base = 8
    RULE_wdl_type = 9
    RULE_unbound_decls = 10
    RULE_bound_decls = 11
    RULE_any_decls = 12
    RULE_number = 13
    RULE_expression_placeholder_option = 14
    RULE_string_part = 15
    RULE_string_expr_part = 16
    RULE_string_expr_with_string_part = 17
    RULE_string = 18
    RULE_primitive_literal = 19
    RULE_expr = 20
    RULE_expr_infix = 21
    RULE_expr_infix0 = 22
    RULE_expr_infix1 = 23
    RULE_expr_infix2 = 24
    RULE_expr_infix3 = 25
    RULE_expr_infix4 = 26
    RULE_expr_infix5 = 27
    RULE_expr_core = 28
    RULE_version = 29
    RULE_import_alias = 30
    RULE_import_as = 31
    RULE_import_doc = 32
    RULE_struct = 33
    RULE_meta_value = 34
    RULE_meta_string_part = 35
    RULE_meta_string = 36
    RULE_meta_array = 37
    RULE_meta_object = 38
    RULE_meta_object_kv = 39
    RULE_meta_kv = 40
    RULE_parameter_meta = 41
    RULE_meta = 42
    RULE_task_runtime_kv = 43
    RULE_task_runtime = 44
    RULE_task_input = 45
    RULE_task_output = 46
    RULE_task_command_string_part = 47
    RULE_task_command_expr_part = 48
    RULE_task_command_expr_with_string = 49
    RULE_task_command = 50
    RULE_task_element = 51
    RULE_task = 52
    RULE_inner_workflow_element = 53
    RULE_call_alias = 54
    RULE_call_input = 55
    RULE_call_inputs = 56
    RULE_call_body = 57
    RULE_call_name = 58
    RULE_call = 59
    RULE_scatter = 60
    RULE_conditional = 61
    RULE_workflow_input = 62
    RULE_workflow_output = 63
    RULE_workflow_element = 64
    RULE_workflow = 65
    RULE_document_element = 66
    RULE_document = 67

    ruleNames =  [ "comment", "meta_comment", "meta_value_comment", "meta_array_comment", 
                   "meta_object_comment", "map_type", "array_type", "pair_type", 
                   "type_base", "wdl_type", "unbound_decls", "bound_decls", 
                   "any_decls", "number", "expression_placeholder_option", 
                   "string_part", "string_expr_part", "string_expr_with_string_part", 
                   "string", "primitive_literal", "expr", "expr_infix", 
                   "expr_infix0", "expr_infix1", "expr_infix2", "expr_infix3", 
                   "expr_infix4", "expr_infix5", "expr_core", "version", 
                   "import_alias", "import_as", "import_doc", "struct", 
                   "meta_value", "meta_string_part", "meta_string", "meta_array", 
                   "meta_object", "meta_object_kv", "meta_kv", "parameter_meta", 
                   "meta", "task_runtime_kv", "task_runtime", "task_input", 
                   "task_output", "task_command_string_part", "task_command_expr_part", 
                   "task_command_expr_with_string", "task_command", "task_element", 
                   "task", "inner_workflow_element", "call_alias", "call_input", 
                   "call_inputs", "call_body", "call_name", "call", "scatter", 
                   "conditional", "workflow_input", "workflow_output", "workflow_element", 
                   "workflow", "document_element", "document" ]

    EOF = Token.EOF
    LINE_COMMENT=1
    VERSION=2
    IMPORT=3
    WORKFLOW=4
    TASK=5
    STRUCT=6
    SCATTER=7
    CALL=8
    IF=9
    THEN=10
    ELSE=11
    ALIAS=12
    AS=13
    In=14
    INPUT=15
    OUTPUT=16
    PARAMETERMETA=17
    META=18
    COMMAND=19
    RUNTIME=20
    BOOLEAN=21
    INT=22
    FLOAT=23
    STRING=24
    FILE=25
    ARRAY=26
    MAP=27
    PAIR=28
    OBJECT=29
    OBJECT_LITERAL=30
    SEP=31
    DEFAULT=32
    IntLiteral=33
    FloatLiteral=34
    BoolLiteral=35
    LPAREN=36
    RPAREN=37
    LBRACE=38
    RBRACE=39
    LBRACK=40
    RBRACK=41
    ESC=42
    COLON=43
    LT=44
    GT=45
    GTE=46
    LTE=47
    EQUALITY=48
    NOTEQUAL=49
    EQUAL=50
    AND=51
    OR=52
    OPTIONAL=53
    STAR=54
    PLUS=55
    MINUS=56
    DOLLAR=57
    COMMA=58
    SEMI=59
    DOT=60
    NOT=61
    TILDE=62
    DIVIDE=63
    MOD=64
    SQUOTE=65
    DQUOTE=66
    WHITESPACE=67
    Identifier=68
    StringPart=69
    BeginWhitespace=70
    BeginHereDoc=71
    BeginLBrace=72
    HereDocUnicodeEscape=73
    CommandUnicodeEscape=74
    StringCommandStart=75
    EndCommand=76
    CommandStringPart=77
    VersionWhitespace=78
    ReleaseVersion=79
    BeginMeta=80
    MetaWhitespace=81
    MetaBodyComment=82
    MetaIdentifier=83
    MetaColon=84
    EndMeta=85
    MetaBodyWhitespace=86
    MetaValueComment=87
    MetaBool=88
    MetaInt=89
    MetaFloat=90
    MetaNull=91
    MetaSquote=92
    MetaDquote=93
    MetaEmptyObject=94
    MetaEmptyArray=95
    MetaLbrack=96
    MetaLbrace=97
    MetaValueWhitespace=98
    MetaStringPart=99
    MetaArrayComment=100
    MetaArrayCommaRbrack=101
    MetaArrayComma=102
    MetaRbrack=103
    MetaArrayWhitespace=104
    MetaObjectComment=105
    MetaObjectIdentifier=106
    MetaObjectColon=107
    MetaObjectCommaRbrace=108
    MetaObjectComma=109
    MetaRbrace=110
    MetaObjectWhitespace=111
    HereDocEscapedEnd=112

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CommentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LINE_COMMENT(self):
            return self.getToken(WdlV1Parser.LINE_COMMENT, 0)

        def getRuleIndex(self):
            return WdlV1Parser.RULE_comment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComment" ):
                listener.enterComment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComment" ):
                listener.exitComment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComment" ):
                return visitor.visitComment(self)
            else:
                return visitor.visitChildren(self)




    def comment(self):

        localctx = WdlV1Parser.CommentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_comment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(WdlV1Parser.LINE_COMMENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Meta_commentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MetaBodyComment(self):
            return self.getToken(WdlV1Parser.MetaBodyComment, 0)

        def getRuleIndex(self):
            return WdlV1Parser.RULE_meta_comment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMeta_comment" ):
                listener.enterMeta_comment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMeta_comment" ):
                listener.exitMeta_comment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMeta_comment" ):
                return visitor.visitMeta_comment(self)
            else:
                return visitor.visitChildren(self)




    def meta_comment(self):

        localctx = WdlV1Parser.Meta_commentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_meta_comment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(WdlV1Parser.MetaBodyComment)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Meta_value_commentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MetaValueComment(self):
            return self.getToken(WdlV1Parser.MetaValueComment, 0)

        def getRuleIndex(self):
            return WdlV1Parser.RULE_meta_value_comment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMeta_value_comment" ):
                listener.enterMeta_value_comment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMeta_value_comment" ):
                listener.exitMeta_value_comment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMeta_value_comment" ):
                return visitor.visitMeta_value_comment(self)
            else:
                return visitor.visitChildren(self)




    def meta_value_comment(self):

        localctx = WdlV1Parser.Meta_value_commentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_meta_value_comment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(WdlV1Parser.MetaValueComment)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Meta_array_commentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MetaArrayComment(self):
            return self.getToken(WdlV1Parser.MetaArrayComment, 0)

        def getRuleIndex(self):
            return WdlV1Parser.RULE_meta_array_comment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMeta_array_comment" ):
                listener.enterMeta_array_comment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMeta_array_comment" ):
                listener.exitMeta_array_comment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMeta_array_comment" ):
                return visitor.visitMeta_array_comment(self)
            else:
                return visitor.visitChildren(self)




    def meta_array_comment(self):

        localctx = WdlV1Parser.Meta_array_commentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_meta_array_comment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(WdlV1Parser.MetaArrayComment)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Meta_object_commentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MetaObjectComment(self):
            return self.getToken(WdlV1Parser.MetaObjectComment, 0)

        def getRuleIndex(self):
            return WdlV1Parser.RULE_meta_object_comment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMeta_object_comment" ):
                listener.enterMeta_object_comment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMeta_object_comment" ):
                listener.exitMeta_object_comment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMeta_object_comment" ):
                return visitor.visitMeta_object_comment(self)
            else:
                return visitor.visitChildren(self)




    def meta_object_comment(self):

        localctx = WdlV1Parser.Meta_object_commentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_meta_object_comment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(WdlV1Parser.MetaObjectComment)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Map_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MAP(self):
            return self.getToken(WdlV1Parser.MAP, 0)

        def LBRACK(self):
            return self.getToken(WdlV1Parser.LBRACK, 0)

        def wdl_type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(WdlV1Parser.Wdl_typeContext)
            else:
                return self.getTypedRuleContext(WdlV1Parser.Wdl_typeContext,i)


        def COMMA(self):
            return self.getToken(WdlV1Parser.COMMA, 0)

        def RBRACK(self):
            return self.getToken(WdlV1Parser.RBRACK, 0)

        def getRuleIndex(self):
            return WdlV1Parser.RULE_map_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMap_type" ):
                listener.enterMap_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMap_type" ):
                listener.exitMap_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMap_type" ):
                return visitor.visitMap_type(self)
            else:
                return visitor.visitChildren(self)




    def map_type(self):

        localctx = WdlV1Parser.Map_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_map_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(WdlV1Parser.MAP)
            self.state = 147
            self.match(WdlV1Parser.LBRACK)
            self.state = 148
            self.wdl_type()
            self.state = 149
            self.match(WdlV1Parser.COMMA)
            self.state = 150
            self.wdl_type()
            self.state = 151
            self.match(WdlV1Parser.RBRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(WdlV1Parser.ARRAY, 0)

        def LBRACK(self):
            return self.getToken(WdlV1Parser.LBRACK, 0)

        def wdl_type(self):
            return self.getTypedRuleContext(WdlV1Parser.Wdl_typeContext,0)


        def RBRACK(self):
            return self.getToken(WdlV1Parser.RBRACK, 0)

        def PLUS(self):
            return self.getToken(WdlV1Parser.PLUS, 0)

        def getRuleIndex(self):
            return WdlV1Parser.RULE_array_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray_type" ):
                listener.enterArray_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray_type" ):
                listener.exitArray_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_type" ):
                return visitor.visitArray_type(self)
            else:
                return visitor.visitChildren(self)




    def array_type(self):

        localctx = WdlV1Parser.Array_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_array_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(WdlV1Parser.ARRAY)
            self.state = 154
            self.match(WdlV1Parser.LBRACK)
            self.state = 155
            self.wdl_type()
            self.state = 156
            self.match(WdlV1Parser.RBRACK)
            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==55:
                self.state = 157
                self.match(WdlV1Parser.PLUS)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Pair_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PAIR(self):
            return self.getToken(WdlV1Parser.PAIR, 0)

        def LBRACK(self):
            return self.getToken(WdlV1Parser.LBRACK, 0)

        def wdl_type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(WdlV1Parser.Wdl_typeContext)
            else:
                return self.getTypedRuleContext(WdlV1Parser.Wdl_typeContext,i)


        def COMMA(self):
            return self.getToken(WdlV1Parser.COMMA, 0)

        def RBRACK(self):
            return self.getToken(WdlV1Parser.RBRACK, 0)

        def getRuleIndex(self):
            return WdlV1Parser.RULE_pair_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPair_type" ):
                listener.enterPair_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPair_type" ):
                listener.exitPair_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPair_type" ):
                return visitor.visitPair_type(self)
            else:
                return visitor.visitChildren(self)




    def pair_type(self):

        localctx = WdlV1Parser.Pair_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_pair_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(WdlV1Parser.PAIR)
            self.state = 161
            self.match(WdlV1Parser.LBRACK)
            self.state = 162
            self.wdl_type()
            self.state = 163
            self.match(WdlV1Parser.COMMA)
            self.state = 164
            self.wdl_type()
            self.state = 165
            self.match(WdlV1Parser.RBRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_baseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def array_type(self):
            return self.getTypedRuleContext(WdlV1Parser.Array_typeContext,0)


        def map_type(self):
            return self.getTypedRuleContext(WdlV1Parser.Map_typeContext,0)


        def pair_type(self):
            return self.getTypedRuleContext(WdlV1Parser.Pair_typeContext,0)


        def STRING(self):
            return self.getToken(WdlV1Parser.STRING, 0)

        def FILE(self):
            return self.getToken(WdlV1Parser.FILE, 0)

        def BOOLEAN(self):
            return self.getToken(WdlV1Parser.BOOLEAN, 0)

        def OBJECT(self):
            return self.getToken(WdlV1Parser.OBJECT, 0)

        def INT(self):
            return self.getToken(WdlV1Parser.INT, 0)

        def FLOAT(self):
            return self.getToken(WdlV1Parser.FLOAT, 0)

        def Identifier(self):
            return self.getToken(WdlV1Parser.Identifier, 0)

        def getRuleIndex(self):
            return WdlV1Parser.RULE_type_base

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_base" ):
                listener.enterType_base(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_base" ):
                listener.exitType_base(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_base" ):
                return visitor.visitType_base(self)
            else:
                return visitor.visitChildren(self)




    def type_base(self):

        localctx = WdlV1Parser.Type_baseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_type_base)
        self._la = 0 # Token type
        try:
            self.state = 171
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [26]:
                self.enterOuterAlt(localctx, 1)
                self.state = 167
                self.array_type()
                pass
            elif token in [27]:
                self.enterOuterAlt(localctx, 2)
                self.state = 168
                self.map_type()
                pass
            elif token in [28]:
                self.enterOuterAlt(localctx, 3)
                self.state = 169
                self.pair_type()
                pass
            elif token in [21, 22, 23, 24, 25, 29, 68]:
                self.enterOuterAlt(localctx, 4)
                self.state = 170
                _la = self._input.LA(1)
                if not((((_la - 21)) & ~0x3f) == 0 and ((1 << (_la - 21)) & 140737488355615) != 0):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Wdl_typeContext(ParserRuleContext):
        __slots__ = 'parser'
